<resources>
    <string name="app_name">Tasks</string>
    <string name="mytaskapp">MyTaskApp</string>
    <string name="new_task">New Task</string>
    <string name="enter_the_task_title">Enter The Task Title</string>
    <string name="enter_the_task_description">Enter The Task Description</string>
    <string name="select_image">Select Image</string>
    <string name="save_task">Save Task</string>
    <string name="about_mytaskapp">About MyTaskApp</string>
    <string name="version_1_0">Version: 1.0</string>
    <string name="developers_itzik_ben_harush_nir_aizen_ofir_salomon">Developers: Itzik Ben-Harush, Nir Aizen, Ofir Salomon</string>
    <string name="contact_info_mytaskapp_com">Contact: info@MyTaskApp.com</string>
    <string name="this_app_helps_you_manage_your_tasks_effectively">This app helps you manage your tasks effectively.</string>
    <string name="back_about">Back</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="contact_us">Contact Us</string>
    <string name="if_you_have_any_questions_or_need_support_please_contact_us_at_support_mytaskapp_com">If you have any questions or need support, please contact us at support@mytaskapp.com.</string>
    <string name="contact_us_button">Contact Us</string>
    <string name="back_contact_us">Back</string>
    <string name="select_image_f_i">Select Image</string>
    <string name="save_image_f_i">Save Image</string>
    <string name="back_detail">Back</string>
    <string name="search_tasks">Search Tasks</string>
    <string name="contact_us_task_list">Contact Us</string>
    <string name="about_task_list">About</string>
    <string name="loading">Loading</string>
    <string name="update_task">Update Task</string>
    <string name="enter_the_task_title_update">Enter The Task Title</string>
    <string name="enter_the_task_description_update">Enter The Task Description</string>
    <string name="update_task_update">Update Task</string>
    <string name="add_task_to_calendar">Add Task to Calendar</string>
    <string name="do_you_want_to_add_this_task_to_your_calendar">Do you want to add this task to your calendar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_ascending">Title Ascending</string>
    <string name="title_descending">Title Descending</string>
    <string name="date_ascending">Date Ascending</string>
    <string name="date_descending">Date Descending</string>
    <string name="sort_by">Sort By</string>
    <string name="ok">Ok</string>
    <string name="app_icon">app icoon\n</string>
</resources>