<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_you_have_any_questions_or_need_support_please_contact_us_at_support_mytaskapp_com"
        android:layout_marginTop="8dp" />

    <!-- Add Contact Us Button -->
    <Button
        android:id="@+id/contact_us_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_button"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/back_button_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_contact_us"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>
</LinearLayout>
